fixed sizing and video controls in showreel div and fixed view on iphone X in landscope mode 📱

--- a/style_index.css
+++ b/style_index.css
@@ -38,7 +38,7 @@ nav {
   border-color: silver;
   align-items: center;
   align-self: stretch;
-  height: 6vh;
+  height: 3rem;
   position: fixed;
   left: 0;
   top: 0;
@@ -46,6 +46,9 @@ nav {
   background-color: #303030;
   z-index: 1;
   opacity: 0.75;
+  padding-top: env(safe-area-inset-top); 
+  padding-right: env(safe-area-inset-right);
+  padding-left: env(safe-area-inset-left); 
 }
 
 h1 {
@@ -105,24 +108,37 @@ h1 > a {
 }
 
 .bio {
-  margin: 1rem 0rem;
+  margin: 0rem 0rem;
   text-align: center;
 }
 
 .showreel-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   height: 100vh;
   background-color: #303030;
   color: white;
-  padding-top: 6vh;
-  min-height: 25rem;
+  padding-top: 3rem;
+  min-height: 30rem;
+  padding-right: env(safe-area-inset-right);
+  padding-left: env(safe-area-inset-left); 
+}
+
+@media (orientation: portrait) {
+  .showreel-container {
+    height: 45em;
+  }
+}
+
+@media (orientation: portrait) and (max-width: 600px) {
+  .showreel-container {
+    height: 35em;
+  }
 }
 
 .showreel-title {
-  margin: 3rem 0rem;
   text-transform: uppercase;
   font-size: 2rem;
   font-weight: bold;
@@ -130,23 +146,28 @@ h1 > a {
 
 .showreel {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  height: 75%;
+  width: fit-content;
 }
 
 video {
-  max-width: 1920px;
-  min-width: 320px;
+  max-height: 1080px; 
 }
 
 .showreel > video {
-  height: 60vh;
-  max-width: min(1920px, 100vw);
+  height: 100%;
 }
 
 @media screen and (min-width: 320px) and (max-width: 600px) {
   .showreel > video {
     width: 100vw;
+    height: auto;
+  }
+  
+  .showreel {
+    height: fit-content;
+    width: auto;
+    max-height: calc((1080 / 1920) * 100vw);
   }
 }
 
@@ -157,6 +178,8 @@ video {
   align-self: stretch;
   background-color: #505050;
   padding: 5vh 0vh;
+  padding-right: env(safe-area-inset-right);
+  padding-left: env(safe-area-inset-left); 
 }
 
 .project-videos {
@@ -202,9 +225,10 @@ video {
   flex-direction: column;
   background-color: #B0B0B0;
   align-self: stretch;
-  margin: 0px 0px;
   padding: 20px 0px;
   align-items: center;
+  padding-right: env(safe-area-inset-right);
+  padding-left: env(safe-area-inset-left); 
 }
 
 .about-title {
@@ -231,6 +255,9 @@ video {
   align-items: center;
   background-color: #505050;
   padding: 1vw 0vw;
+  padding-right: env(safe-area-inset-right);
+  padding-left: env(safe-area-inset-left);
+  padding-bottom: env(safe-area-inset-bottom); 
 }
 
 .contact-container > p {
